--- a/toolkit/data-sources/dolos/Cargo.toml
+++ b/toolkit/data-sources/dolos/Cargo.toml
@@ -42,6 +42,7 @@ figment = { workspace = true }
 tokio = { workspace = true }
 derive-new = { workspace = true }
 chrono = { workspace = true }
+bech32 = { workspace = true }
 
 [features]
 default = []
