--- a/.github/actions/deploy/deploy-rustdoc/action.yml
+++ b/.github/actions/deploy/deploy-rustdoc/action.yml
@@ -7,10 +7,9 @@ runs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: install rust
+    - name: Install Rust (from rust-toolchain.toml)
       uses: actions-rust-lang/setup-rust-toolchain@v1
-      with:
-        toolchain: nightly
+      # No `with.toolchain` so it reads rust-toolchain(.toml)
 
     - name: install protoc
       run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
@@ -42,7 +41,6 @@ runs:
 
     - name: Generate documentation
       env:
-        RUSTDOCFLAGS: "--enable-index-page -Zunstable-options"
         SKIP_WASM_BUILD: "1"
       run: cargo doc --no-deps
       shell: bash
@@ -53,4 +51,3 @@ runs:
         github_token: ${{ env.GITHUB_TOKEN }}
         publish_branch: gh-pages
         publish_dir: ./target/doc
-
