--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,16 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
     steps:
+
+      - name: Free up disk space
+        run: |
+          df -h
+          sudo rm -rf /opt/hostedtoolcache || true
+          sudo rm -rf /usr/share/dotnet || true
+          sudo rm -rf /usr/local/lib/android || true
+          docker system prune -af || true
+          df -h
+
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -151,6 +161,16 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
     steps:
+
+      - name: Free up disk space
+        run: |
+          df -h
+          sudo rm -rf /opt/hostedtoolcache || true
+          sudo rm -rf /usr/share/dotnet || true
+          sudo rm -rf /usr/local/lib/android || true
+          docker system prune -af || true
+          df -h
+
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
