--- a/demo/runtime/Cargo.toml
+++ b/demo/runtime/Cargo.toml
@@ -107,7 +107,7 @@ serde_json = { workspace = true }
 substrate-wasm-builder = { workspace = true, optional = true }
 
 [features]
-default = ["std"]
+default = ["std", "try-runtime"]
 std = [
 	"authority-selection-inherents/std",
 	"serde_json/std",
