change: deprecate sidechain_slots crate and move it behind sp_sidechain

--- a/toolkit/sidechain/sidechain-slots/Cargo.toml
+++ b/toolkit/sidechain/sidechain-slots/Cargo.toml
@@ -14,14 +14,14 @@ workspace = true
 
 [dependencies]
 parity-scale-codec = { workspace = true }
-scale-info = { workspace = true }
+scale-info = { workspace = true, features = ["serde"] }
 sidechain-domain = { workspace = true }
 sp-api = { workspace = true }
 sp-blockchain = { workspace = true, optional = true }
 sp-runtime = { workspace = true }
 sp-core = { workspace = true, features = ["serde"]}
 sp-consensus-slots = { workspace = true }
-serde = { workspace = true, optional = true }
+serde = { workspace = true }
 envy = { workspace = true, optional = true }
 
 [dev-dependencies]
@@ -37,9 +37,5 @@ std = [
     'sp-core/std',
     'sp-consensus-slots/std',
     'envy',
-]
-serde = [
-    "dep:serde",
-    "scale-info/serde",
-    "sp-core/serde",
+    'serde/std'
 ]
