--- a/toolkit/sidechain/primitives/Cargo.toml
+++ b/toolkit/sidechain/primitives/Cargo.toml
@@ -20,6 +20,7 @@ parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
 sp-api = { workspace = true }
 sp-runtime = { workspace = true }
+sidechain-slots = { workspace = true }
 serde = { workspace = true, optional = true }
 
 [features]
@@ -34,4 +35,5 @@ std = [
     "sp-api/std",
     "sp-runtime/std",
 	"serde",
+    "sidechain-slots/std",
 ]
