--- a/demo/runtime/Cargo.toml
+++ b/demo/runtime/Cargo.toml
@@ -72,8 +72,7 @@ frame-benchmarking = { workspace = true, optional = true }
 frame-system-benchmarking = { workspace = true, optional = true }
 
 # Local Dependencies
-sp-block-production-log = { workspace = true }
-pallet-block-production-log = { workspace = true, features = ["block-participation"] }
+pallet-block-production-log = { workspace = true, features = ["block-participation", "aura-compat"] }
 sp-sidechain = { workspace = true }
 pallet-sidechain = { workspace = true }
 pallet-session-validator-management = { workspace = true }
@@ -161,7 +160,6 @@ std = [
 	"sidechain-slots/std",
 	"sidechain-domain/std",
 	"sp-inherents/std",
-	"sp-block-production-log/std",
 	"pallet-block-participation/std",
 	"sp-block-participation/std",
 	"pallet-governed-map/std",
