--- a/toolkit/committee-selection/query/Cargo.toml
+++ b/toolkit/committee-selection/query/Cargo.toml
@@ -24,7 +24,6 @@ sp-blockchain = { workspace = true }
 sp-session-validator-management = { workspace = true, features = ["std"] }
 sp-sidechain = { workspace = true, features = ["std"] }
 sidechain-domain = { workspace = true, features = ["std"] }
-sidechain-block-search = { workspace = true }
 authority-selection-inherents = { workspace = true, features = ["std"] }
 thiserror = { workspace = true }
 plutus = { workspace = true }
@@ -36,3 +35,4 @@ minicbor = { workspace = true }
 plutus-datum-derive = { workspace = true }
 tokio = { workspace = true }
 authority-selection-inherents = { workspace = true, features = ["mock"] }
+proptest = { workspace = true }
