--- a/demo/node/Cargo.toml
+++ b/demo/node/Cargo.toml
@@ -53,7 +53,7 @@ authority-selection-inherents = { workspace = true }
 frame-system = { workspace = true }
 pallet-transaction-payment = { workspace = true }
 sidechain-domain = { workspace = true }
-sidechain-slots = { workspace = true }
+sidechain-slots = { workspace = true, features = ["std", "serde"] }
 sp-sidechain = { workspace = true }
 pallet-sidechain-rpc = { workspace = true, features = ["legacy-slotapi-compat"] }
 pallet-session-validator-management = { workspace = true }
