--- a/toolkit/utils/db-sync-sqlx/Cargo.toml
+++ b/toolkit/utils/db-sync-sqlx/Cargo.toml
@@ -15,3 +15,4 @@ workspace = true
 sqlx = { workspace = true }
 sidechain-domain = { workspace = true, features = ["std"] }
 num-traits = { workspace = true }
+hex = { workspace = true }
